--- a/nacos-provide-order/src/main/resources/application.yml
+++ b/nacos-provide-order/src/main/resources/application.yml
@@ -6,10 +6,12 @@ spring:
         tx-service-group: default_tx_group
     nacos:
       discovery:
-        server-addr: ${NACOS_HOST}:${NACOST_PORT}
+        server-addr: ${NACOS_HOST}:${NACOS_PORT}
         namespace: ${NACOS_NAMESPACE}
+        username: ${NACOS_USERNAME}
+        password: ${NACOS_PASSWORD}
   datasource:
-    url: jdbc:mysql://${MYSQL_IP}:${MYSQL_PORT}/seata_order?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://${MYSQL_IP}:${MYSQL_PORT}/seata_order?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
     username: ${MYSQL_USERNAME}
     password: ${MYSQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -21,7 +23,7 @@ seata:
   config:
     type: nacos
     nacos:
-      server-addr: ${NACOS_HOST}:${NACOST_PORT}
+      server-addr: ${NACOS_HOST}:${NACOS_PORT}
       group: SEATA_GROUP
       namespace: ${NACOS_NAMESPACE}
       username: ${NACOS_USERNAME}
@@ -30,7 +32,7 @@ seata:
     type: nacos
     nacos:
       application: seata-server
-      server-addr: ${NACOS_HOST}:${NACOST_PORT}
+      server-addr: ${NACOS_HOST}:${NACOS_PORT}
       group: SEATA_GROUP
       namespace: ${NACOS_NAMESPACE}
       username: ${NACOS_USERNAME}
@@ -38,5 +40,5 @@ seata:
   enable-auto-data-source-proxy: false
 nacos:
   config:
-    server-addr: ${NACOS_HOST}:${NACOST_PORT}
-    namespace: ${NACOS_NAMESPACE}
+    server-addr: 127.0.0.1:8848
+    namespace: 68468122-8955-45ee-35b7-3087972325b1
