--- a/nacos-provide-second/pom.xml
+++ b/nacos-provide-second/pom.xml
@@ -16,6 +16,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com</groupId>
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
