--- a/springcloud-gateway/pom.xml
+++ b/springcloud-gateway/pom.xml
@@ -14,6 +14,10 @@
 	<description>Demo project for Spring Boot</description>
 	<dependencies>
 		<dependency>
+			<groupId>com.alibaba.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com</groupId>
 			<artifactId>common</artifactId>
 			<version>1.0-SNAPSHOT</version>
