--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <springcloud.version>Greenwich.SR3</springcloud.version>
+        <springcloud.version>Hoxton.SR3</springcloud.version>
         <spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>
         <springboot.version>2.2.1.RELEASE</springboot.version>
         <mybatis-plus-boot-starter.version>3.3.0</mybatis-plus-boot-starter.version>
