--- a/springcloud-gateway/src/main/resources/application.yml
+++ b/springcloud-gateway/src/main/resources/application.yml
@@ -24,6 +24,12 @@ spring:
             - Path=/consume/*
           filters:
             - RewritePath=/consume/(?<segment>.*), /${segment}
+        - id: "order"
+          uri: lb://nacos-provide-order
+          predicates:
+            - Path=/order/*
+          filters:
+            - RewritePath=/order/(?<segment>.*), /${segment}
       httpclient:
         connect-timeout: 1000
         response-timeout: 3s
